[Qt] ImageDiff does not consider --tolerance https://bugs.webkit.org/show_bug.cgi?id=66299

Reviewed by Csaba Osztrogonác.

* DumpRenderTree/qt/ImageDiff.cpp:
(main):

Canonical link: https://commits.webkit.org/82491@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@93509 268f45cc-cd09-0410-ab3c-d52691b4dbfc